KAS-3684 Replace Auk::Input instances (part 2)

--- a/app/components/documents/batch-details/document-details-row.hbs
+++ b/app/components/documents/batch-details/document-details-row.hbs
@@ -14,7 +14,7 @@
     {{#if @isEditingEnabled}}
       <AuInput
         data-test-document-details-input
-        @block={{true}}
+        @width="block"
         @value={{mut @row.name}}
       />
     {{else}}
