--- a/app/components/publications/publication/proofs/proof-info-panel.hbs
+++ b/app/components/publications/publication/proofs/proof-info-panel.hbs
@@ -57,7 +57,7 @@
             <Auk::Label>
               {{t "proofprint-corrector"}}
             </Auk::Label>
-            <Auk::Input
+            <AuInput
               data-test-proof-info-panel-edit-corrector
               @value={{mut @publicationSubcase.proofPrintCorrector}}
             />
