--- a/app/components/publications/publication/proofs/proof-upload-modal.hbs
+++ b/app/components/publications/publication/proofs/proof-upload-modal.hbs
@@ -36,9 +36,9 @@
       <Auk::Label for="proofPrintCorrector">
         {{t "who-proof-reads"}}
       </Auk::Label>
-      <Auk::Input
-        id="proofPrintCorrector"
+      <AuInput
         @value={{mut this.proofPrintCorrector}}
+        id="proofPrintCorrector"
       />
     </div>
   </Auk::Modal::Body>
