--- a/app/templates/settings/emails.hbs
+++ b/app/templates/settings/emails.hbs
@@ -20,27 +20,27 @@
               <Auk::Label @required={{true}}>
                 {{t "email-to"}}
               </Auk::Label>
-              <Auk::Input
+              <AuInput
                 @value={{mut this.model.translationRequestToEmail}}
-                @block={{true}}
+                @width="block"
               />
             </div>
             <div class="auk-form-group">
               <Auk::Label>
                 {{t "email-cc"}}
               </Auk::Label>
-              <Auk::Input
+              <AuInput
                 @value={{mut this.model.translationRequestCcEmail}}
-                @block={{true}}
+                @width="block"
               />
             </div>
             <div class="auk-form-group">
               <Auk::Label>
                 {{t "email-reply-to"}}
               </Auk::Label>
-              <Auk::Input
+              <AuInput
                 @value={{mut this.model.translationRequestReplyToEmail}}
-                @block={{true}}
+                @width="block"
               />
             </div>
           </div>
@@ -54,27 +54,27 @@
               <Auk::Label @required={{true}}>
                 {{t "email-to"}}
               </Auk::Label>
-              <Auk::Input
+              <AuInput
                 @value={{mut this.model.proofRequestToEmail}}
-                @block={{true}}
+                @width="block"
               />
             </div>
             <div class="auk-form-group">
               <Auk::Label>
                 {{t "email-cc"}}
               </Auk::Label>
-              <Auk::Input
+              <AuInput
                 @value={{mut this.model.proofRequestCcEmail}}
-                @block={{true}}
+                @width="block"
               />
             </div>
             <div class="auk-form-group">
               <Auk::Label>
                 {{t "email-reply-to"}}
               </Auk::Label>
-              <Auk::Input
+              <AuInput
                 @value={{mut this.model.proofRequestReplyToEmail}}
-                @block={{true}}
+                @width="block"
               />
             </div>
           </div>
@@ -88,27 +88,27 @@
               <Auk::Label @required={{true}}>
                 {{t "email-to"}}
               </Auk::Label>
-              <Auk::Input
+              <AuInput
                 @value={{mut this.model.publicationRequestToEmail}}
-                @block={{true}}
+                @width="block"
               />
             </div>
             <div class="auk-form-group">
               <Auk::Label>
                 {{t "email-cc"}}
               </Auk::Label>
-              <Auk::Input
+              <AuInput
                 @value={{mut this.model.publicationRequestCcEmail}}
-                @block={{true}}
+                @width="block"
               />
             </div>
             <div class="auk-form-group">
               <Auk::Label>
                 {{t "email-reply-to"}}
               </Auk::Label>
-              <Auk::Input
+              <AuInput
                 @value={{mut this.model.publicationRequestReplyToEmail}}
-                @block={{true}}
+                @width="block"
               />
             </div>
           </div>
