--- a/app/components/publications/publication/case/contact-persons/contact-person-add-modal.hbs
+++ b/app/components/publications/publication/case/contact-persons/contact-person-add-modal.hbs
@@ -11,26 +11,35 @@
             <Auk::Label for="firstNameInput" @required={{true}}>
               {{t "first-name"}}
             </Auk::Label>
-            <Auk::Input data-test-contact-person-add-first-name id="firstNameInput"
-              @block={{true}}
+            <AuInput
+              data-test-contact-person-add-first-name
+              @width="block"
               @value={{this.firstName}}
-              {{on "input" this.validators.firstName.enableError}} />
+              {{on "input" this.validators.firstName.enableError}}
+              id="firstNameInput"
+            />
           </div>
           <div class={{this.validators.lastName.errorClass}}>
             <Auk::Label for="lastNameInput" @required={{true}}>
               {{t "last-name"}}
             </Auk::Label>
-            <Auk::Input data-test-contact-person-add-last-name id="lastNameInput"
-              @block={{true}}
+            <AuInput
+              data-test-contact-person-add-last-name
+              @width="block"
               @value={{this.lastName}}
-              {{on "input" this.validators.lastName.enableError}} />
+              {{on "input" this.validators.lastName.enableError}}
+              id="lastNameInput"
+            />
           </div>
         </div>
         <div class="auk-form-group">
           <Auk::Label for="emailInput">{{t "email"}}</Auk::Label>
-          <Auk::Input data-test-contact-person-add-email id="emailInput"
-            @block={{true}}
-            @value={{this.email}} />
+          <AuInput
+            data-test-contact-person-add-email
+            @width="block"
+            @value={{this.email}}
+            id="emailInput"
+          />
         </div>
         <div class="auk-form-group">
           <Auk::Label>
