--- a/app/components/publications/publication/proofs/proof-received-panel.hbs
+++ b/app/components/publications/publication/proofs/proof-received-panel.hbs
@@ -80,10 +80,10 @@
         <Auk::Label for="proofPrintCorrector">
           {{t "who-proof-reads"}}
         </Auk::Label>
-        <Auk::Input
+        <AuInput
           data-test-proof-received-panel-edit-corrector
-          id="proofPrintCorrector"
           @value={{mut this.newProofPrintCorrector}}
+          id="proofPrintCorrector"
         />
       </div>
     </Auk::Modal::Body>
