--- a/app/components/utils/add-existing-piece.hbs
+++ b/app/components/utils/add-existing-piece.hbs
@@ -4,14 +4,14 @@
   <Auk::Toolbar @auto={{true}}>
     <Auk::Toolbar::Group @position="left">
       <Auk::Toolbar::Item class="auk-u-maximize-width auk-u-overflow-hidden">
-        <Auk::Input
+        <AuInput
+          data-test-add-existing-piece-search-input={{true}}
           @icon="search"
-          @block={{true}}
+          @width="block"
           @value={{this.filter}}
+          {{on "input" (perform this.searchTask)}}
           id="searchId"
           placeholder={{t "search-placeholder"}}
-          data-test-add-existing-piece-search-input={{true}}
-          {{on "input" (perform this.searchTask)}}
         />
       </Auk::Toolbar::Item>
     </Auk::Toolbar::Group>
