--- a/app/components/utils/model-manager.hbs
+++ b/app/components/utils/model-manager.hbs
@@ -50,8 +50,8 @@
     <Auk::Modal::Body>
       <div class="auk-form-group">
         <Auk::Label>{{t "title"}}</Auk::Label>
-        <Auk::Input
-          @block={{true}}
+        <AuInput
+          @width="block"
           @value={{this.title}}
         />
       </div>
@@ -68,8 +68,8 @@
     <Auk::Modal::Body>
       <div class="auk-form-group">
         <Auk::Label>{{t "title"}}</Auk::Label>
-        <Auk::Input
-          @block={{true}}
+        <AuInput
+          @width="block"
           @value={{this.title}}
         />
       </div>
