--- a/app/components/utils/system-alert-form.hbs
+++ b/app/components/utils/system-alert-form.hbs
@@ -27,8 +27,8 @@
     class="auk-form-group"
   >
     <Auk::Label>{{t "title"}}</Auk::Label>
-    <Auk::Input
-      @block={{true}}
+    <AuInput
+      @width="block"
       @value={{this.alert.title}}
     />
   </div>
