--- a/app/templates/newsletters/search.hbs
+++ b/app/templates/newsletters/search.hbs
@@ -9,12 +9,12 @@
           </Auk::Label>
           <Utils::SearchTooltip />
         </div>
-        <Auk::Input
-          @block={{true}}
-          placeholder={{t "search-placeholder"}}
+        <AuInput
+          data-test-route-search-input
+          @width="block"
           @value={{this.searchTextBuffer}}
           id="keyword"
-          data-test-route-search-input
+          placeholder={{t "search-placeholder"}}
         />
       </div>
       <div class="auk-form-group auk-u-position-relative au-u-margin-bottom-none au-u-1-6" data-test-route-search-date-from>
@@ -39,9 +39,9 @@
         <Auk::Label for="ministerName">
           {{t "minister"}}
         </Auk::Label>
-        <Auk::Input
+        <AuInput
           data-test-route-search-mandatee-input
-          @block={{true}}
+          @width="block"
           @value={{this.mandateesBuffer}}
           id="ministerName"
         />
