--- a/app/templates/search.hbs
+++ b/app/templates/search.hbs
@@ -45,12 +45,12 @@
             </Auk::Label>
             <Utils::SearchTooltip />
           </div>
-          <Auk::Input
-            @block={{true}}
-            placeholder={{t "search-placeholder"}}
+          <AuInput
+            data-test-route-search-input
+            @width="block"
             @value={{this.searchTextBuffer}}
             id="keyword"
-            data-test-route-search-input
+            placeholder={{t "search-placeholder"}}
           />
         </div>
       </div>
@@ -81,9 +81,9 @@
           <Auk::Label for="ministerName">
             {{t "minister"}}
           </Auk::Label>
-          <Auk::Input
+          <AuInput
             data-test-route-search-mandatee-input
-            @block={{true}}
+            @width="block"
             @value={{this.mandateesBuffer}}
             id="ministerName"
           />
