KAS-2303 refactor and octanify create-agendaitem component

--- a/app/components/agenda/agenda-header/agenda-actions.hbs
+++ b/app/components/agenda/agenda-header/agenda-actions.hbs
@@ -144,7 +144,7 @@
 {{#if this.isAddingAgendaitems}}
   <Agenda::Agendaitem::CreateAgendaitem
     @meeting={{@meeting}}
-    @isAddingAgendaitems={{this.isAddingAgendaitems}}
+    @onClose={{this.closeAddAgendaitemsModal}}
     @onCreate={{@didApproveAgendaitems}}
   />
 {{/if}}
