--- a/app/components/subcases/subcase-item.hbs
+++ b/app/components/subcases/subcase-item.hbs
@@ -46,22 +46,7 @@
             </p>
           {{/if}}
         </div>
-        <ul class="vlc-status-timeline">
-          {{#unless this.loadSubcasePhases.isRunning}}
-            {{#each this.phases as |phase|}}
-              {{#if phase.label}}
-                <li
-                  class="vlc-status-timeline__item vlc-status-timeline__item--neutral"
-                >
-                  <div class="vlc-status-timeline__dot"></div>
-                  <div class="vlc-status-timeline__text">
-                    {{subcase-timeline-item-text phase=phase}}
-                  </div>
-                </li>
-              {{/if}}
-            {{/each}}
-          {{/unless}}
-        </ul>
+        <Subcase::Timeline @subcase={{@subcase}}/>
       </Auk::Toolbar::Item>
     </Auk::Toolbar::Group>
   </Auk::Toolbar>
