KAS-3612 fix test where adding new subcase and then opening it would open the wrong one

--- a/app/components/subcases/subcases-process.hbs
+++ b/app/components/subcases/subcases-process.hbs
@@ -10,7 +10,7 @@
         </p>
       </div>
       <div class="auk-u-mb-2">
-        <div class="auk-h4">
+        <div data-test-subcases-process-shorttitle class="auk-h4">
           {{subcase.shortTitle}}
         </div>
       </div>
