--- a/app/components/publications/publication/case/government-areas/government-areas-panel.hbs
+++ b/app/components/publications/publication/case/government-areas/government-areas-panel.hbs
@@ -1,6 +1,8 @@
-<Utils::GovernmentAreas::GovernmentAreasPanel
-  @referenceDate={{or this.meeting.plannedStart this.agenda.created @publicationFlow.created}}
-  @governmentAreas={{this.governmentAreas}}
-  @allowEditing={{true}}
-  @onSave={{this.saveGovernmentAreas}}
-/>
+{{#unless this.loadData.isRunning}}
+  <Utils::GovernmentAreas::GovernmentAreasPanel
+    @referenceDate={{or this.meeting.plannedStart this.agenda.created @publicationFlow.created}}
+    @governmentAreas={{this.governmentAreas}}
+    @allowEditing={{true}}
+    @onSave={{this.saveGovernmentAreas}}
+  />
+{{/unless}}
