chore: remove unused print routes and components

--- a/app/components/m-header.hbs
+++ b/app/components/m-header.hbs
@@ -17,7 +17,7 @@
             </Auk::Tab>
             <Auk::Tab
               @route="agendas"
-              @current-when="agendas agenda print-overviews.decisions print-overviews.press-agenda"
+              @current-when="agendas agenda"
               data-test-m-header-agendas
             >
               {{t "agendas"}}
