refactor: Octane refactor agenda/print route

--- a/app/templates/agenda/print.hbs
+++ b/app/templates/agenda/print.hbs
@@ -1,7 +1,7 @@
 <div class="auk-scroll-wrapper auk-u-maximize-width auk-u-scroll-scrollable vlc-hide-scrollbar-on-print">
   <Agenda::PrintableAgenda
-    @meeting={{this.model.meeting}}
+    @meeting={{@model.meeting}}
     @notas={{this.notaGroups}}
-    @announcements={{this.model.announcements}}
+    @announcements={{@model.announcements}}
   />
 </div>
