--- a/app/components/web-components/vl-datepicker.hbs
+++ b/app/components/web-components/vl-datepicker.hbs
@@ -49,11 +49,14 @@
     />
   {{/if}}
   {{#if @enableClear}}
-    <Auk::Button
-      @skin="muted-borderless"
-      @layout="icon-only"
+    <AuButton
+      @skin="naked"
       @icon="x"
+      @hideText={{true}}
       {{on "click" @onClear}}
-    />
+      class="auk-button--muted"
+    >
+      {{t "reset"}}
+    </AuButton>
   {{/if}}
 </div>
