KAS-2303 PR comments

--- a/app/components/agenda/agendaitem/agendaitem-controls.hbs
+++ b/app/components/agenda/agendaitem/agendaitem-controls.hbs
@@ -14,7 +14,7 @@
               <AuButton
                 data-test-agendaitem-controls-action-postpone-revert
                 @skin="link"
-                {{on "click" this.resetDecisionResultCode.perform}}
+                {{on "click" (perform this.resetDecisionResultCode)}}
                 role="menuitem"
               >
                 {{t "postpone-revert"}}
@@ -22,7 +22,7 @@
             {{else if resultCode.isRetracted}}
               <AuButton
                 @skin="link"
-                {{on "click" this.resetDecisionResultCode.perform}}
+                {{on "click" (perform this.resetDecisionResultCode)}}
                 role="menuitem"
               >
                 {{t "retract-revert"}}
@@ -31,14 +31,14 @@
               <AuButton
                 data-test-agendaitem-controls-action-postpone
                 @skin="link"
-                {{on "click" this.postponeAgendaitem.perform}}
+                {{on "click" (perform this.postponeAgendaitem)}}
                 role="menuitem"
               >
                 {{t "postpone"}}
               </AuButton>
               <AuButton
                 @skin="link"
-                {{on "click" this.retractAgendaitem.perform}}
+                {{on "click" (perform this.retractAgendaitem)}}
                 role="menuitem"
               >
                 {{t "retract"}}
