KAS-1652 refactor using resultCode with concept implemented

--- a/app/components/agenda/agenda-overview/agenda-overview-item.hbs
+++ b/app/components/agenda/agenda-overview/agenda-overview-item.hbs
@@ -1,8 +1,8 @@
 <div
   class={{if
     (or
-      this.decisionActivity.decisionResultCode.isPostponed
-      this.decisionActivity.decisionResultCode.isRetracted
+      this.decisionActivity.isPostponed
+      this.decisionActivity.isRetracted
     )
     "auk-u-opacity--1/3"
   }}
