--- a/app/components/agenda/agendaitem/agendaitem-case-panel/agendaitem-case-panel-view.hbs
+++ b/app/components/agenda/agendaitem/agendaitem-case-panel/agendaitem-case-panel-view.hbs
@@ -125,14 +125,14 @@
               </AuPill>
             </div>
           {{/if}}
-          {{#if this.decisionActivity.decisionResultCode.isPostponed}}
+          {{#if this.decisionActivity.isPostponed}}
             <div class="auk-u-mt-2">
               <AuPill @size="small">
                 {{t "postponed-item"}}
               </AuPill>
             </div>
           {{/if}}
-          {{#if this.decisionActivity.decisionResultCode.isRetracted}}
+          {{#if this.decisionActivity.isRetracted}}
             <div class="auk-u-mt-2">
               <AuPill @size="small">
                 {{t "retracted-item"}}
